# adventure-learning-bot

./: .gitignore  README.md  adventures_db.sql  bot.py  pyproject.toml  sample_adventure.json  sample_adventure.jsonc
.github/workflows/: main.yml
adventure-workshop/: app.yaml  package-lock.json  package.json  tailwind.config.js
adventure-workshop/src/: App.js  App.jsx  GenreOptions.js  GenreOptions.jsx  Intro.jsx  Selector.jsx  Start.jsx  StoryBuilder.js
adventure-workshop/src/StoryBuilder/: StoryBuilder.jsx
adventure_api/: Dockerfile  main.py  psqlconnect.py  pyproject.toml
discord-bot/: bot.py  psqlconnect.py  pyproject.toml
